add id name and save btn-hilla

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,9 @@ input {
 .align-center {
     align-items: center;
 }
+
+.location-name{
+    height: 30px;
+    width: 120px;
+    border-radius: 2px;
+}
