--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,23 @@
 
 /* FONTS */
 
+@font-face {
+    font-family: Parisienne;
+    src: url(../font/Parisienne-Regular.ttf);
+}
+
 /* BASE */
 
 body {
-    background-color: #ccc;
+    background-image: url("../img/bg-beach.jpg");
     height: 100vh;
     margin: 0;
     padding: 0;
+}
+
+main{
+    background-color: rgba(170, 167, 167, 80%);
+    padding-bottom: 30px;
 }
 
 button {
@@ -28,6 +38,16 @@ input {
 
 /* COMPONENTS */
 
+.logo{
+    font-family: Parisienne;
+    font-size: 3rem;
+    color: #c9e6ff; ;
+}
+
+.logo span{
+    color: #00dde3;
+}
+
 .travel-details {
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -38,6 +58,12 @@ input {
 .map {
     grid-row: 1 / 3;
     grid-column: 2 / 4;
+}
+
+/* LAYOUT */
+
+.container{
+    width: 1060px;
 }
 
 /* HELPERS */
@@ -52,6 +78,10 @@ input {
     justify-content: space-between;
 }
 
+.justify-center{
+    justify-content: center;
+}
+
 .align-center {
     align-items: center;
 }
@@ -60,4 +90,8 @@ input {
     height: 30px;
     width: 120px;
     border-radius: 2px;
+}
+
+.column{
+    flex-direction: column ;
 }
