--- a/css/style.css
+++ b/css/style.css
@@ -13,57 +13,108 @@
 
 body {
     background-image: url("../img/bg-beach.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     margin: 0;
     padding: 0;
 }
 
-main{
+main {
     background-color: rgba(170, 167, 167, 80%);
-    padding-bottom: 30px;
+    flex-grow: 1;
 }
 
 button {
-    background-color: #9999;
+    background-color: #495959b8;
     border: none;
     padding: 5px 8px;
     cursor: pointer;
     border-radius: 2px;
     margin: auto 10px;
+    font-size: 1.5rem;
+    color: #c9e6ff;
+    outline: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #687575d5
 }
 
 input {
-    height: fit-content;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    outline: none;
 }
 
 /* COMPONENTS */
 
-.logo{
+.logo {
     font-family: Parisienne;
     font-size: 3rem;
-    color: #c9e6ff; ;
+    color: #c9e6ff;
+    ;
 }
 
-.logo span{
+.logo span {
     color: #00dde3;
+}
+
+.location-copy {
+    margin-bottom: 20px;
 }
 
 .travel-details {
     display: grid;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
     margin: auto 10px;
 }
 
 .map {
     grid-row: 1 / 3;
-    grid-column: 2 / 4;
+    grid-column: 3 / 6;
+}
+
+.locations-container {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    font-size: 1rem;
+    width: 100%;
+}
+
+table{
+    width: 100%;
+    overflow: auto ;
+}
+
+tbody{
+    display:block;
+    width: 100%;
+    overflow: auto;
+    height: 100px;
+  }
+  
+
+tr button {
+    background-color: #495959b8;
+    border: none;
+    padding: 5px 8px;
+    cursor: pointer;
+    border-radius: 2px;
+    margin: auto 10px;
+    font-size: 1rem;
+    color: #c9e6ff;
+    outline: none;
+    border-radius: 5px;
 }
 
 /* LAYOUT */
 
-.container{
-    width: 1060px;
+.container {
+    width: 1080px;
 }
 
 /* HELPERS */
@@ -78,7 +129,7 @@ input {
     justify-content: space-between;
 }
 
-.justify-center{
+.justify-center {
     justify-content: center;
 }
 
@@ -86,12 +137,32 @@ input {
     align-items: center;
 }
 
-.location-name{
+.location-name {
     height: 30px;
     width: 120px;
     border-radius: 2px;
 }
 
-.column{
-    flex-direction: column ;
+.column {
+    flex-direction: column;
+}
+
+
+
+
+
+
+thead tr {
+   display: block;
+}
+
+thead {
+  background: black;
+  color:#fff;
+}
+
+th, td {
+  padding: 5px;
+  text-align: left;
+  width: 200px;
 }
