--- a/css/style.css
+++ b/css/style.css
@@ -67,19 +67,19 @@ input {
 
 .travel-details {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
     margin: auto 10px;
 }
 
 .map {
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     grid-column: 3 / 6;
 }
 
 .locations-container {
-    grid-row: 2/3;
+    grid-row: 2/4;
     grid-column: 1/3;
     font-size: 1rem;
     width: 100%;
@@ -94,7 +94,7 @@ tbody{
     display:block;
     width: 100%;
     overflow: auto;
-    height: 100px;
+    height: 208px;
   }
   
 
